fix button spacing

--- a/public/css/introduction.css
+++ b/public/css/introduction.css
@@ -67,5 +67,5 @@
     overflow: hidden;
 }
 #begin {
-    margin: 5px 0px;
+    margin-top: 10px;
 }
